--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -11,6 +11,7 @@ body {
     padding: 10px 20px;
     box-sizing: border-box;
     font-size: 10px;
+    box-shadow: 0 1px 1px -1px gray; /* Creates a soft shadow at the bottom */
 }
 
 .header-title {
@@ -36,6 +37,13 @@ body {
     border-radius: 15px;
     transition: background-color 0.3s, transform 0.2s;
     text-shadow: 1px 1px 2px black;
+}
+.header-nav a:hover {
+    transform: scale(1.05); /* Slightly enlarges the button */
+}
+
+.header-nav a:active {
+    transform: scale(0.95); /* Mimics a button press effect */
 }
 
 .portfolio {
