--- a/index.css
+++ b/index.css
@@ -41,11 +41,16 @@ h1 {
     text-decoration: none;
     text-shadow: 1px 1px 2px black;
 }
-
-a{
+.box a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 100%;
     text-decoration: none;
-    color: white;
+    color: white; /* Ensure text color is white */
 }
+
 .first { background-color: #26547c; }
 .second { background-color: #ef476f; }
 .third { background-color: #ffd166; }
