--- a/about/about.css
+++ b/about/about.css
@@ -5,6 +5,7 @@ body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-size: 14px;
 }
 
 
@@ -58,7 +59,20 @@ body {
 /* css */
 .section {
     overflow: hidden; /* Prevents elements from being visible outside this container */
+    margin-bottom: 30px;;
 }
+
+.part{
+    display: flex;
+    justify-content: space-between; /* Aligns children (columns) to each side */
+    align-items: flex-start; /* Aligns items at the top of the container */
+}
+.left-column, .right-column {
+    flex: 1; /* Each column takes up equal space */
+    padding: 20px; /* Add padding for spacing around content */
+}
+
+
 
 .title, .meat {
     opacity: 0; /* Start elements as invisible */
@@ -81,6 +95,11 @@ body {
 
 
 
+hr{
+    width: 80%;
+    margin: 20px auto;
+    max-width: 1000px;
+}
 
 .resume {
     max-width: 80%;
@@ -114,6 +133,7 @@ h3 {
     width: 100%;
     border-radius: 8px;
     overflow: hidden;
+    margin-bottom: 7px;
 }
 
 .skill {
@@ -123,20 +143,16 @@ h3 {
 
 .python { width: 80%; background-color: #4CAF50; }
 .java { width: 60%; background-color: #2196F3; }
-.javascript { width: 60%; background-color: #f0db4f; }
-.cpp { width: 55%; background-color: #f34b7d; }
-.html-css { width: 45%; background-color: #e34c26; }
+.javascript { width: 50%; background-color: #f0db4f; }
+.cpp { width: 30%; background-color: #f34b7d; }
+.html-css { width: 65%; background-color: #e34c26; }
+.haskell { width: 40%; background-color: #6b54d4; }
 .office { width: 85%; background-color: #0078D7; }
 .data-analysis { width: 75%; background-color: #f2c811; }
 .stata { width: 70%; background-color: #1a936f; }
 
 
-#home{
-    color: black ;
-    text-decoration: none;
-    font-weight: 1000;
-    text-shadow: 2px 2px #ffffff;
-}
+
 
 .picture {
     margin: 0 auto; /* Centers the container horizontally */
@@ -153,4 +169,18 @@ h3 {
 .picture img {
     width: 100%; /* Make sure the image covers the container width */
     height: auto; /* Keep the image aspect ratio */
+}
+
+input{
+    margin-left: 10px;
+    text-decoration: none;
+    padding: 5px 10px;
+    color:black;
+    border: none;
+    outline: 1px solid black;
+    font-size: 14px;
+    cursor: pointer;
+    border-radius: 15px;
+    transition: background-color 0.3s, transform 0.2s;
+    background-color: transparent;
 }
