--- a/about/about.css
+++ b/about/about.css
@@ -184,3 +184,16 @@ input{
     transition: background-color 0.3s, transform 0.2s;
     background-color: transparent;
 }
+
+nav a {
+    text-decoration: none;
+    padding: 10px 20px;
+    color: white;
+    border: none;
+    outline: none;
+    font-size: 16px;
+    cursor: pointer;
+    border-radius: 15px;
+    transition: background-color 0.3s, transform 0.2s;
+    text-shadow: 1px 1px 2px black;
+}
