--- a/blog/blog.css
+++ b/blog/blog.css
@@ -1,9 +1,11 @@
 body, html {
     margin: 0;
-    font-family: 'Times New Roman', Times, serif;
     background-color: #fdfdfd;
     color: #333;
+    font-family: monospace;
 }
+
+
 
 .title{
     text-align: center;
@@ -25,6 +27,44 @@ body, html {
     text-align: center;
     font-size: 20px;
 }
+.topic-select {
+    width: 100%;
+    border: none;
+    justify-content: center;
+    padding: 10px 0;
+    white-space: nowrap;
+    text-align: center;
+    margin-top: 10px; /* Ensure it stays close to the search bar */
+}
+
+.topic-tag {
+    padding: 5px 10px;
+    margin: 5px;
+    color: #333;
+    font-size: 14px;
+    border-radius: 15px;
+    border: #bbbbbb 0.5px solid;
+    cursor: pointer;
+    transition: background-color 0.3s, transform 0.3s;
+}
+
+.topic-tag:hover {
+    transform: scale(1.05);
+    filter: grayscale(0%);
+}
+
+.topic-tag:active {
+    transform: scale(0.95);
+}
+
+
+.topic-tag.philosophy.selected { background-color: #b6eef2; }
+.topic-tag.politics.selected { background-color: #c2f0c1; }
+.topic-tag.movies.selected { background-color: #eea4f8; }
+.topic-tag.books.selected { background-color: #f8e6a4; }
+.topic-tag.travel.selected { background-color: #fec7a0; }
+.topic-tag.other.selected { background-color: #f5c1d2; }
+.topic-tag.coding.selected { background-color: #e6b3f8; }
 
 .tag {
     display: inline-block;
@@ -67,11 +107,9 @@ body, html {
 }
 
 #topicSelect {
-    padding: 5px;
-    width: 100px;
-    margin-top: 10px;
-    border-radius: 15px;
-    border: #bbbbbb 0.5px solid;
+    margin-top: 0px;
+    margin-bottom: 10px;
+   
 }
 
 #portfolioContainer {
@@ -147,6 +185,7 @@ body, html {
     padding: 5px 10px;
     background-color: #fff;
     margin-left: 5px;
+    font-family: monospace;
     color: #333;
     font-size: 14px;
     border: #bbbbbb 0.5px solid;
@@ -157,7 +196,6 @@ body, html {
 }
 
 .button:hover {
-    background-color: #e0e0e0;
     transform: scale(1.05);
 }
 
@@ -166,7 +204,7 @@ body, html {
 }
 
 img {
-    width: 350px;
+    width: 300px;
     height: auto;
     height: auto;
     display: block;
